gapping fix for small screen view

--- a/src/components/HomeComponents/Benefits/benefits.css
+++ b/src/components/HomeComponents/Benefits/benefits.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 24px;
+    gap: 64px;
     
 
     .home_benefits_wrapper {
